--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/edx/frontend-lib-special-exams.git"
+    "url": "git+https://github.com/cucwd/frontend-lib-special-exams.git"
   },
   "publishConfig": {
     "access": "public"
@@ -38,9 +38,9 @@
     }
   },
   "license": "AGPL-3.0",
-  "homepage": "https://github.com/edx/frontend-lib-special-exams",
+  "homepage": "https://github.com/cucwd/frontend-lib-special-exams",
   "bugs": {
-    "url": "https://github.com/edx/frontend-lib-special-exams/issues"
+    "url": "https://github.com/cucwd/frontend-lib-special-exams/issues"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.34",
@@ -52,7 +52,7 @@
     "eventemitter3": "^4.0.7"
   },
   "peerDependencies": {
-    "@edx/frontend-platform": "^1.8.4",
+    "@edx/frontend-platform": "npm:@cucwd-prod/frontend-platform@1.15.6-nutmeg.2",
     "@edx/paragon": "^19.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -64,8 +64,8 @@
     "@reduxjs/toolkit": "^1.5.1"
   },
   "devDependencies": {
-    "@edx/frontend-build": "^5.6.11",
-    "@edx/frontend-platform": "1.8.4",
+    "@edx/frontend-build": "npm:@cucwd-prod/frontend-build@9.0.5-maple.3",
+    "@edx/frontend-platform": "npm:@cucwd-prod/frontend-platform@1.15.6-nutmeg.2",
     "@edx/paragon": "19.14.1",
     "@testing-library/dom": "7.16.3",
     "@testing-library/jest-dom": "5.10.1",
