--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edx/frontend-lib-special-exams",
-  "version": "1.14.0",
+  "version": "1.14.0-nutmeg.2",
   "description": "Special exams lib",
   "main": "dist/index.js",
   "release": {
